--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header class="personal-details">
         <div id="avatar">
           <img
-            src="C:\Users\renat\Downloads/renato ft linkedin - copia.png"
+            src="https://media-exp1.licdn.com/dms/image/C5603AQGJfsyT0aNotg/profile-displayphoto-shrink_200_200/0?e=1598486400&v=beta&t=95pdCC4s5DewJq3zElyAwJ1zeUwYZxU0th5wfuPZV5s"
             alt="Foto do Candidato"
           />
         </div>
