--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </li>
             <li>
               <i class="fab fa-linkedin"></i>
-              <a href="https:www.linkedin.com/in/renatoxavierinternational/" target="_blank">LinkedIn</a>
+              <a href="https://www.linkedin.com/in/renatoxavierinternational/" target="_blank">LinkedIn</a>
             </li>
             <li><i class="fas fa-phone-square-alt"></i> 
             <a href= "tel:+55083987420112">+55 83 987420112</a>
