--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               Poliglota (falo 5 línguas). Em busca de uam oportunidade em Front-End Developer. 
               Já fiz Intercâmbio para os Estados Unidos e Itália. 
               Cursando <b>Desenvolvimento Web Full Stack </b> na Rocketseat School, e também, 
-              o 1º período de <b> Sistemas para Internet </b> 
+              sou estudante de <b> Sistemas para Internet </b> 
               no IFPB e com grande interesse na área da Desenvolvimento Front-End e
               desenvolvimento IOS. Sou formado em Relações Internacionais pela UEPB.
             </p>
